<resources>
    <string name="app_name">Chat Application</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_send">Send</string>
    <string name="btn_close">Close</string>
    <string name="hint_message">Type a message…</string>
    <string name="label_channels">Channels</string>
    <string name="label_messages">Messages</string>
    <string name="error_empty_credentials">Введите имя пользователя и пароль</string>
    <string name="error_login_failed">Неверный логин или пароль</string>
    <string name="error_network">Network error. Please try again.</string>
    <string name="error_unauthorized">Session expired. Please log in again.</string>
    <string name="error_send_failed">Failed to send message.</string>
    <string name="error_load_channels">Failed to load channels.</string>
    <string name="error_load_messages">Failed to load messages.</string>
    <string name="select_channel">Select a channel to start chatting</string>
    <string name="loading_more">Loading more messages…</string>
    <string name="no_more_messages">No more messages</string>
    <string name="typing_indicator">Someone is typing…</string>
    <string name="image_message">[Image]</string>
    <string name="content_description_chat_image">Chat image</string>
    <string name="content_description_full_image">Full screen image</string>
    <string name="content_description_close">Close</string>
    <string name="offline_banner">Нет подключения — показаны кешированные данные</string>
    <string name="error_offline_queued">Нет сети: сообщение будет отправлено при подключении</string>
</resources>
